# DocuMind-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/config/: settings.py
backend/database/: connection.py
backend/models/: schema.py
backend/routes/: auth_routes.py  rag_routes.py  upload_routes.py
backend/services/: auth_service.py  db_service.py  rag_service.py
backend/utils/: data_loader.py  embeddings.py  search.py  vectorstore.py
data/faiss_index/: index.faiss  index.pkl
frontend/: streamlit_app.py
